# NLP_SIRIUS

./: .gitignore  README.md  pyproject.toml
content/: audio_transcription.txt
src/: tts_pipeline.ipynb
