[tool.poetry]
name = "nlp-sirius"
version = "0.1.0"
description = ""
authors = ["TEAM3"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
librosa = "~0.10"
transformers = "~4.38"
jupyter = "^1.0.0"
torch = "2.2.1"
jiwer = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
